Update commands.html with title and script fixes
Added title and corrected script tags in commands.html

--- a/commands.html
+++ b/commands.html
@@ -3,8 +3,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+  <title>Open Form Add-in</title>
 
-    <!-- Office JavaScript API -->
-    <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></ipt" src="commands.js"></script
+  <!-- Office JavaScript API -->
+  <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
+
+  <!-- Your command code -->
+  <script type="text/javascript" src="commands.js"></script>
+</head>
+<body>
+  <!-- No UI needed, this page just hosts the commands -->
+</body>
+</html>
